--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,10 +1,13 @@
 <div class="page-header">
-  <h1>Photo #<%= @photo.id %></h1>
+  <h1>
+  Photo #<%= @photo.id %>
+  <a href="/create_favorite?photo_id=<%= @photo.id %>" class="btn btn-success">Favorite</a>
+  </h1>
 </div>
 
 <dl class="dl-horizontal">
   <dt>Image url</dt>
-  <dd><%= @photo.image_url %></dd>
+  <dd><img src="<%= @photo.image_url %>" width="500"></dd>
 
   <dt>Caption</dt>
   <dd><%= @photo.caption %></dd>
@@ -12,4 +15,20 @@
   <dt>User</dt>
   <dd><%= @photo.user_id %></dd>
 
-</dl>
+<ul>
+  <% @photo.comments.each do |comment| %>
+    <li>
+    <h4><%= comment.user.email %></h4>
+    <p><%= comment.content %></p>
+    </li>
+    <% end %>
+ </ul>
+
+<li>
+  <form action="/create_comment">
+    <textarea id="content" name="content" placeholder="Please enter your comment here" class="form-control"></textarea>
+    <input type="hidden" id="photo_id" name="photo_id" value="<%= @photo.id %>">
+    <input type="hidden" id="user_id" name="user_id" value="<%= current_user.id %>">
+    <input type="submit" value="Create Comment" class="btn btn-primary">
+  </form>
+</li>
