--- a/app/views/photos/my_favorites.html.erb
+++ b/app/views/photos/my_favorites.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Photos</h1>
+  <h1>My Favorites</h1>
 </div>
 
 <p><a href="/photos/new" class="btn btn-primary">Add a New Photo</a></p>
@@ -7,7 +7,7 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Image url</th>
+      <th>Image</th>
       <th>Caption</th>
       <th>User</th>
       <th></th>
@@ -19,7 +19,7 @@
   <tbody>
     <% @photos.each do |photo| %>
       <tr>
-        <td><img src="<%= photo.image_url %>" width="50"></td>
+        <td><img src="<%= photo.image_url %>" width="40"></td>
         <td><%= photo.caption %></td>
         <td><%= photo.user_id %></td>
         <td>
@@ -41,4 +41,3 @@
     <% end %>
   </tbody>
 </table>
-
